# ghidra-deep-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  extract_knowledge.py  ghidra_transport.py  knowledge.py  main.py  models.py  openrouter.toml.example  prompt.py  protocol.md  pyproject.toml  streaming.py  subagents.toml  test_async_tasks.py  test_compaction.py  test_importer.py  test_knowledge.py  test_resilience.py  test_sandbox_sync.py  test_subagents.py  test_switch_scripts_compile.py  test_switch_tools.py  test_toasts.py  test_tui.py  test_web.py  tui.py
docker/ghidra-mcp/: Dockerfile  entrypoint.sh  importer.py
docker/ghidra-server/: CreateRepository.java  Dockerfile  entrypoint.sh  importer.py
mongodb/: README.md  docker-compose.yml  generate-secrets.sh  init-mongo.sh  keyfile  mongod.conf  mongot.conf  pwfile
scripts/: extract_knowledge.py  lint.sh  typecheck.sh
src/ghidra_deep_agent/: __init__.py  apply_switch_override_script.py  async_tasks.py  compaction.py  find_unrecovered_switches_script.py  ghidra_transport.py  importer_client.py  knowledge.py  mcp_cache.py  models.py  program_resolver.py  prompt.py  prototype_tools.py  recover_prototypes_script.py  resilience.py  runtime.py  sandbox.py  sandbox_sync.py  sessions.py  subagents.py  switch_tools.py  toasts.py  tui.py  validation.py
src/ghidra_deep_agent/tui/: __init__.py  app.py  events.py  formatting.py  help_screen.py  messages.py  program_select.py  report_screen.py  session_select.py  styles.tcss
src/ghidra_deep_agent/tui/widgets/: __init__.py  activity_tree.py  command_input.py  response_log.py  status_bar.py  thinking_panel.py
src/ghidra_deep_agent/web/: __init__.py  event_stream.py  server.py  service.py  sessions.py
src/ghidra_deep_agent/web/static/: app.js  index.html  styles.css
tests/: test_importer.py  test_importer_client.py  test_knowledge.py  test_program_resolver.py  test_web.py
