[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghidra_deep_agent"]

[project]
name = "ghidra-deep-agent"
version = "0.1.0"
description = "A reverse engineering deep agent with Ghidra integration via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "jsonschema",
    "langchain-mcp-adapters",
    "langchain-mongodb",
    "langchain[anthropic]",
    "langchain-deepseek",
    "langchain-ollama",
    "langchain-openrouter",
    "langgraph",
    "langgraph-checkpoint-mongodb",
    "pymongo",
    "python-dotenv",
    "textual",
]

[project.scripts]
ghidra-deep-agent = "main:run"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
exclude = ["agent_output*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# These modules are almost entirely an embedded Java GhidraScript held as a
# string; their lines follow Java conventions, not Python's 88-col limit.
"src/ghidra_deep_agent/recover_prototypes_script.py" = ["E501"]
"src/ghidra_deep_agent/find_unrecovered_switches_script.py" = ["E501"]
"src/ghidra_deep_agent/apply_switch_override_script.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["agent_output"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
